[tool.poetry]
name = "python-proxy-server"
version = "0.1.0"
description = "A free, Python proxy server on AWS lambda"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
zappa = "^0.51.0"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
